# killu-hub-framework

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: bronze_kafka.yaml  bronze_mysql.yaml  bronze_postgres.yaml  chain_api_orders.yaml  silver_orders.yaml
config/batch_chain/: chain_orders.yaml
docs/connectors/: connectors.md
docs/core/: core.md
docs/environments/: environments.md
docs/helm/: helm.md
docs/ingestion/: ingestion.md
docs/layers/: layers.md
docs/operations/: operations.md
docs/processing/: processing.md
docs/storage/: storage.md
docs/usage/: usage.md
examples/: incremental_silver.py  kafka_to_iceberg.py  medallion_postgres.py  postgres_to_iceberg.py  scheduled_pipeline.py
helm/killuhub/: Chart.yaml  values.yaml
helm/killuhub/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  databricks-job.yaml  emr-step.yaml  rbac.yaml  spark-application.yaml
killuhub/: __init__.py
killuhub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
killuhub/connectors/: __init__.py
killuhub/connectors/kafka/: __init__.py  connector.py
killuhub/core/: __init__.py  batch.py  config.py  connector_interface.py  contract.py  engine_interface.py  environment.py  exceptions.py  registry.py  storage_interface.py
killuhub/ingestion/: __init__.py  pipeline.py  scheduler.py
killuhub/layers/: __init__.py
killuhub/processing/: __init__.py  flink_engine.py  spark_engine.py
killuhub/storage/: __init__.py
tests/: test_pipeline.py  test_registry.py
(+21 files in other folders)
